# srsGUI

./: CHANGELOG  CMakeLists.txt  COPYRIGHT  Config.cmake.in  README.md
cmake/modules/: FindQwt.cmake
include/: CMakeLists.txt
include/libsdrgui/: libsdrgui++.h  libsdrgui.h
include/libsdrgui/common/: WaterfallData.h  config.h
include/libsdrgui/plot/: Complexplot.h  Realplot.h  Scatterplot.h  plot_complex.h  plot_real.h  plot_scatter.h  plot_waterfall.h
include/srsgui/: srsgui++.h  srsgui.h
include/srsgui/common/: WaterfallData.h
include/srsgui/plot/: KeyValue.h  TextEdit.h  Waterfallplot.h  key_value.h  plot_complex.h  plot_real.h  text_edit.h
src/: CMakeLists.txt  CMakeLists_bak.txt  libsdrgui++.cpp  libsdrgui.cpp  srsgui++.cpp  srsgui.cpp
src/common/: CMakeLists.txt  Events.cpp  Lineplot.cpp  Pointplot.cpp  Spectrogramplot.cpp
src/complexplot/: CMakeLists.txt  ComplexWidget.cpp  ComplexWidget.h  Complexplot.cpp  ComplexplotWrapper.cpp  ComplexplotWrapper.h  plot_complex.cpp
src/complexplot/test/: CMakeLists.txt  complexplot_test.cpp
src/keyvalue/: CMakeLists.txt  KeyValue.cpp  KeyValueWidget.cpp  KeyValueWidget.h  KeyValueWrapper.cpp  KeyValueWrapper.h  key_value.cpp
src/realplot/: CMakeLists.txt  RealWidget.cpp  RealWidget.h  Realplot.cpp  RealplotWrapper.cpp  RealplotWrapper.h  plot_real.cpp
src/realplot/test/: CMakeLists.txt  realplot_test.cpp
src/scatterplot/: CMakeLists.txt  ScatterWidget.cpp  ScatterWidget.h  Scatterplot.cpp  ScatterplotWrapper.cpp  ScatterplotWrapper.h  plot_scatter.cpp
src/scatterplot/test/: CMakeLists.txt  scatterplot_test.cpp
src/textedit/: CMakeLists.txt  TextEdit.cpp  TextEditWidget.cpp  TextEditWidget.h  TextEditWrapper.cpp  TextEditWrapper.h  text_edit.cpp
src/waterfallplot/: CMakeLists.txt  WaterfallWidget.cpp  WaterfallWidget.h  Waterfallplot.cpp  WaterfallplotWrapper.cpp  WaterfallplotWrapper.h  plot_waterfall.cpp
src/waterfallplot/test/: CMakeLists.txt  Waterfallplot_test.cpp
test/: CMakeLists.txt
test/c/: CMakeLists.txt  complexplot_test.c  realplot_test.c  scatterplot_test.c  waterfallplot_test.c
test/cxx/: CMakeLists.txt  complexplot_test.cpp  realplot_test.cpp  scatterplot_test.cpp  waterfallplot_test.cpp
